# polemarch

./: .coverage.victor-All-Series.19502.690816  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .jshintrc  .pep8  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_NAME  MANIFEST.in  Makefile  README.rst  ansible.cfg  autobuild.sh  autorelease.sh  changelog  deb.mk  debian.mk  deploy-openstack.yml  destroy-openstack.yml  django  docker-compose-test.yml  docker-compose-testrun.yml  docker-compose-tests.rpm.yml  docker-compose-tests.yml  docker-compose.yml  docker_release.yml  ihsctl  ihservice.spec  k8s_env_deploy.yaml  k8s_env_destroy.yaml  package.json  polemarch.spec  polemarch.spec.mk  polemarchctl  pyproject.toml  (+21 more)
.github/: issue_template.md  pull_request_template.md
.gitlab/issue_templates/: Ask.md  Bug.md  Feature request.md
.gitlab/merge_request_templates/: Bugfix.md  Chore.md  Docs.md  Documentation update.md  Feature.md  Fix.md  New feature.md
.helm/: Chart.yaml  values.yaml
debian/: control  copyright  postinst  postrm  preinst  prerm  rules
deployment/: settings_pm.j2
doc/: Makefile  api.rst  api_schema.yaml  api_shema.yaml  backup.rst  cla.rst  conf.py  config.rst  contribute.rst  gui.rst  index.rst  installation.rst  pipinstall.rst  plugins.rst  quickstart.rst  restapi.rst
doc/_static/: ce-docs.css  custom.css
doc/polemarch-sphinx-theme/: layout.html  search.html  searchbox.html  theme.conf
doc/polemarch-sphinx-theme/static/: docs-sidebar.js  documentation_options.js_t  polemarch-style.css  pygments.css
docker/: Dockerfile.dev  Dockerfile.test.rpm
docs/: conf.py  requirements.txt  restapi.rst
envirement/: all.yml
envirement/docker_data/: settings.ini
environment/: all.yml  deployment_pm.yml.j2  docker_build_image_inventory.ini
environment/docker_data/: settings.ini  system_requirements.txt  system_requirements_build.txt  system_requirements_pip.txt
frontend_src/: .babelrc.js  .editorconfig  .eslintrc.js  .prettierrc  Home.vue  HomeView.vue  Logo.vue  ProjectPageAdditional.vue  TasksChart.vue  biome.jsonc  common.js  common.ts  customizer.js  doc.css  doc.js  groups.js  hosts.js  index.html  index.js  index.ts  inventories.js  jsconfig.json  main.js  polemarch-gui.css  projects.js  style.scss  tasks.js  templates.js  tsconfig.json  users.js  vite.config.ts
frontend_src/auth/: AuthPagesLayout.vue  index.ts
frontend_src/dashboard/: HistoryChart.js  HistoryChartContentBody.vue  HistoryChartContentHeader.vue  HistoryChartWidget.js  HomeView.vue  LineChartWidget.js  index.js  widgets.js
frontend_src/fields/: AnsibleJSONFieldContentReadonly.vue  FKJustValueFieldMixin.vue  OneHistoryBooleanFieldContentReadonly.vue  OneHistoryChoicesFieldContentReadonly.vue  OneHistoryExecuteArgsFieldMixin.vue  OneHistoryRawInventory.vue  OneHistoryStringFieldContentReadonly.vue  SeeAlso.vue  UserObjectField.js  index.js  mixins.js
frontend_src/history/: ExecutionTimeField.js  HistoryLine.vue  HistoryStdout.vue  HistoryView.vue  OldLinesMixin.js  OutputLines.vue  index.js  raw-inventory.js  style.scss
frontend_src/hooks/: style.scss
frontend_src/inventory/: InventoryFieldEdit.vue  InventoryFieldReadonly.vue  index.js
frontend_src/layout/: Logo.vue  index.ts
frontend_src/periodic_task/: index.js
frontend_src/project/: execute.js  index.js  periodic-tasks.js  style.scss
frontend_src/project/detail/: RunPlaybook.vue  index.js  style.scss
frontend_src/templates/: index.js
frontend_src/tests/: PmGUITests.js  dashboard.js  fields.js  groups.js  history.js  hooks.js  hosts.js  index.js  inventories.js  projects.js  users.js
frontend_src/users/: index.js  style.scss
frontend_src_new/: .eslintrc.js  .prettierrc  Home.vue  TasksChart.vue  index.js  project.js  style.scss
frontend_src_new/history/: OldLinesMixin.js  OutputLines.vue  index.js  style.scss
frontend_src_new/inventory/: InventoryFKEdit.js  InventoryFieldEdit.vue  InventoryFieldMixin.vue  InventoryFieldReadonly.vue  index.js
frontend_src_new/layout/: Logo.vue  index.js
frontend_src_new/periodic_task/: index.js  style.scss
frontend_src_new/project/: execute.js  index.js  periodic-tasks.js
frontend_src_new/project/detail/: RunPlaybook.vue  index.js
frontend_src_new/templates/: index.js
group_vars/: all.yml
ihservice/: __init__.py  celery_app.py
ihservice/api/: base.py  handlers.py  routers.py  urls.py
ihservice/api/v1/: filters.py  serializers.py  views.py
ihservice/main/: celery_beat_scheduler.py  context_processors.py  exceptions.py  settings.ini  settings.py  urls.py  utils.py  wsgi.py
ihservice/main/environments/: _base.py  default.py  openstack.py
ihservice/main/management/: base.py
ihservice/main/migrations/: 0001_initial.py  0002_initial.py
ihservice/main/models/: __init__.py  base.py  hosts.py  tasks.py
ihservice/main/tests/: __init__.py  _base.py  api.py  envs.py  hosts.py  models.py  tasks.py
initbin/: ihserviceweb.service  ihserviceworker.service  ihsweb.service  ihsworker.service  polemarch.conf  polemarch.service  polemarchweb.service  polemarchworker.service
polemarch/: __init__.py  __main__.py  celery_app.py  environment.py  metrics.py  notificator.py  settings.ini  urls.py  wapp.py  web.ini
polemarch/api/: base.py  fields.py  filters.py  handlers.py  permissions.py  routers.py  schema.py  signals.py  swagger.py  urls.py
polemarch/api/v1/: filters.py  serializers.py  views.py
polemarch/api/v2/: base_serializers.py  filters.py  (+4 more)
polemarch/main/: auth.py  celery_beat_scheduler.py  ci.py  constants.py  context_processors.py  exceptions.py  executions.py  ldap_utils.py  middleware.py  openapi.py  repo_backends.py  settings.ini  settings.py  tasks.py  urls.py  utils.py  validators.py  views.py  wsgi.py
polemarch/plugins/: ansible.py  base.py
polemarch/templates/: menu.html
polemarch/translations/: en.py  ru.py
test_data/: inventory.yml  localhost-inventory.yml  metrics.txt  playbook.yml  projects.yaml  script_hook.sh  test_module.py
test_data/repo/: .polemarch.yaml  ansible.cfg  main.yml
(+323 files in other folders)
