[metadata]
version = attr: polemarch.__version__
description = Polemarch is ansible based service for orchestration infrastructure.
long_description = file: README.rst
license = file: LICENSE_NAME
author = VST Consulting
author_email = sergey.k@vstconsulting.net
url = https://gitlab.com/vstconsulting/polemarch
keywords = ansible, polemarch, infrastructure, devops
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    License :: Other/Proprietary License
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Utilities

[build_sphinx]
project = 'Polemarch'

[githubrelease]
repo = vstconsulting/polemarch
assets =
    dist/polemarch-{release}-0.x86_64.rpm
    dist/polemarch-_{release}-0_amd64.deb
    dist/polemarch-{release}.tar.gz

[aliases]
compile_docs = build_sphinx -b html -s ./doc/ --build-dir ./polemarch/doc/
compile = compile_docs compile
sdist = compile_docs sdist
