[metadata]
version = attr: polemarch.__version__
description = Polemarch is ansible based service for orchestration infrastructure.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = file: LICENSE_NAME
author = VST Consulting
author_email = sergey.k@vstconsulting.net
url = https://gitlab.com/vstconsulting/polemarch
keywords =
    ansible
    polemarch
    infrastructure
    devops
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[build_sphinx]
project = 'Polemarch'

[githubrelease]
repo = vstconsulting/polemarch
assets =
    dist/polemarch-{release}.tar.gz
    dist/polemarch-{release}-cp27-cp27mu-manylinux1_x86_64.whl
    dist/polemarch-{release}-cp35-cp35m-manylinux1_x86_64.whl
    dist/polemarch-{release}-cp36-cp36m-manylinux1_x86_64.whl

[aliases]
compile_docs = build_sphinx -b html -s ./doc/ --build-dir ./polemarch/doc/
compile = compile_docs compile
sdist = compile_docs sdist
