[metadata]
version = attr: polemarch.__version__
description = Polemarch is ansible based service for orchestration infrastructure.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPLv3+
author = VST Consulting
author_email = sergey.k@vstconsulting.net
url = https://gitlab.com/vstconsulting/polemarch
keywords =
    ansible
    polemarch
    infrastructure
    devops
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Operating System :: POSIX
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8, <4.0

[build_sphinx]
project = 'Polemarch'

[githubrelease]
repo = vstconsulting/polemarch
assets =
    dist/polemarch-{release}.tar.gz
    dist/polemarch-{release}-py3-none-any.whl

[aliases]
compile_docs = build_sphinx -b html -s ./doc/ --build-dir ./polemarch/doc/
compile = compile_docs compile
sdist = compile_docs sdist
